[test] config 설정 변경